--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ opencv-python = "^4.11.0.86"
 azure-ai-projects = "^1.0.0b9"
 azure-identity = "^1.21.0"
 openai = "^1.75.0"
+pdf2image = "^1.17.0"
 
 [tool.poetry.scripts]
 tmg-bot = "tmg_bot.__main__:main"
